--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -2,7 +2,9 @@
     padding: 15px;
     width: 100%;
     font-size: 20px;
+    max-width: 400px;
 }
+
 
 #operations {
     grid-row: 2/3;
@@ -12,12 +14,12 @@
     grid-template-rows: 1fr 200px;
     margin-top: 10px;
     border: 1px solid black;
+    max-width: 400px;
 }
 
 #calc {
     display: grid;
-    width: 400px;
-    grid-template-columns: 400px 40px;
+    grid-template-columns: 440px 480px;
     /* position: absolute; */
 }
 
@@ -38,9 +40,27 @@
 }
 
 #answer {
+    grid-column: 2/3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
 
+#type-area {
+    display: grid;
+    grid-template-columns: 400px 40px;
+    max-width: 440px;
+}
 
+#history {
+    display: block;
+    grid-column: 2/3;
+    grid-row: span 2;
+    border: 2px dashed blue;
+    overflow-y: scroll;
+    max-height: 400px;
+}
 
 button {
     margin: 2px;
