--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -1,8 +1,8 @@
 #in {
-  padding: 15px;
-  width: 100%;
-  font-size: 20px;
-  max-width: 400px;
+    padding: 15px;
+    width: 100%;
+    min-width: 100%;
+    font-size: 20px;
 }
 
 #operations {
@@ -11,21 +11,19 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 200px;
-  margin-top: 10px;
   border: 1px solid black;
-  max-width: 400px;
 }
 
 #calc {
-  display: grid;
-  grid-template-columns: 440px 480px;
-  /* position: absolute; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* position: absolute; */
 }
 
 #numbers {
   display: grid;
-  grid-template-columns: repeat(3, 80px);
-  grid-template-rows: repeat(3, 40px);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
 }
 
 #basic {
@@ -39,26 +37,26 @@
 }
 
 #answer {
-  grid-column: 2/3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    white-space: nowrap;
+    height: 20px;
 }
 
 #type-area {
-  display: grid;
-  grid-template-columns: 400px 40px;
-  max-width: 440px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #history {
-  display: block;
-  grid-column: 2/3;
-  grid-row: span 2;
-  border: 2px dashed blue;
-  overflow-y: scroll;
-  max-height: 400px;
+    display: block;
+    grid-column: 2/3;
+    grid-row: span 2;
+    border: 2px dashed blue;
+    overflow-y: scroll;
+    max-height: 400px;
 }
 
 button {
