--- a/src/components/ExpressionInput.css
+++ b/src/components/ExpressionInput.css
@@ -1,19 +1,21 @@
 .in {
-  padding: 15px;
-  width: 100%;
-  font-size: 20px;
-  max-width: 400px;
+    padding: 15px;
+    width: 100%;
+    min-width: 100%;
+    font-size: 20px;
+    max-width: 400px;
 }
 
 #answer {
-  grid-column: 2/3;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    white-space: nowrap;
+    height: 20px;
 }
 
 #type-area {
-  display: grid;
-  grid-template-columns: 400px 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
