--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,13 @@ html{
     height: 100%;
     width: 100%;
 }
+body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+#root{
+    height: 100%;
+    width: 100%;
+}
