--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -2,7 +2,8 @@
 	display: grid;
 	grid-template-columns: repeat(2, minmax(500px, 1fr));
 	grid-template-rows: repeat(2, 100px) 1fr;
-	height: 100%;
+    height: 400px;
+    max-height: 400px;
 	padding: 100px 300px 300px 300px;
 }
 
